@@ -1,8 +1,7 @@
 /*********************************************************************************************
  *
- * 'TopLevelFolder.java, in plugin ummisco.gama.ui.navigator, is part of the source code of the
- * GAMA modeling and simulation platform.
- * (c) 2007-2016 UMI 209 UMMISCO IRD/UPMC & Partners
+ * 'TopLevelFolder.java, in plugin ummisco.gama.ui.navigator, is part of the source code of the GAMA modeling and
+ * simulation platform. (c) 2007-2016 UMI 209 UMMISCO IRD/UPMC & Partners
  *
  * Visit https://github.com/gama-platform/gama for license information and developers contact.
  * 
@@ -11,8 +10,9 @@
 package ummisco.gama.ui.navigator;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -25,6 +25,7 @@ import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.FileLocator;
 import org.eclipse.core.runtime.IPath;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.Image;
@@ -44,7 +45,7 @@ import ummisco.gama.ui.resources.IGamaColors;
 public abstract class TopLevelFolder extends VirtualContent {
 
 	enum Location {
-		CoreModels, Plugins, Other, Unknown
+		CoreModels, Plugins, Other, Unknown, Tests
 	}
 
 	/**
@@ -90,8 +91,7 @@ public abstract class TopLevelFolder extends VirtualContent {
 					if (severity == IMarker.SEVERITY_ERROR) {
 						break;
 					}
-				} catch (final CoreException e) {
-				}
+				} catch (final CoreException e) {}
 
 			}
 		}
@@ -103,17 +103,11 @@ public abstract class TopLevelFolder extends VirtualContent {
 	 * @return
 	 */
 	protected final boolean accepts(final IProject project) {
-		if (project == null) {
-			return false;
-		}
-		if (!project.exists()) {
-			return false;
-		}
+		if (project == null) { return false; }
+		if (!project.exists()) { return false; }
 		// TODO This one is clearly a hack. Should be replaced by a proper way
 		// to track persistently the closed projects
-		if (!project.isOpen()) {
-			return getLocation(project.getLocation()) == getModelsLocation();
-		}
+		if (!project.isOpen()) { return getLocation(project.getLocation()) == getModelsLocation(); }
 		try {
 			return accepts(project.getDescription());
 		} catch (final CoreException e) {
@@ -127,34 +121,26 @@ public abstract class TopLevelFolder extends VirtualContent {
 	protected abstract Location getModelsLocation();
 
 	protected Location getLocation(final IPath location) {
-		URL urlRep = null;
 		try {
-
-			final URL old_url = new URL("platform:/plugin/" + GamaBundleLoader.CORE_MODELS + "/");
-			final URL new_url = FileLocator.resolve(old_url);
+			final URL old_url = new URL("platform:/plugin/" + GamaBundleLoader.CORE_MODELS.getSymbolicName() + "/");
+			final URL new_url = FileLocator.toFileURL(old_url);
 			// windows URL formating
-			final String path_s = new_url.getPath().replaceFirst("^/(.:/)", "$1");
-			final java.nio.file.Path normalizedPath = Paths.get(path_s).normalize();
-			urlRep = normalizedPath.toUri().toURL();
-			// urlRep = FileLocator.resolve(new URL("platform:/plugin/" +
-			// GamaBundleLoader.CORE_MODELS + "/"));
-
-			// System.out.println("Model path:" + location.toOSString() + " |||
-			// Plugin path: " + urlRep.getPath());
-			if (location.toOSString().startsWith(urlRep.getPath())) {
-				return Location.CoreModels;
-			}
-			if (location.toOSString().startsWith(urlRep.getPath().replace(GamaBundleLoader.CORE_MODELS + "/", ""))) {
+			final URI resolvedURI = new URI(new_url.getProtocol(), new_url.getPath(), null).normalize();
+			final URL urlRep = resolvedURI.toURL();
+			final String osString = location.toOSString();
+			final boolean isTest = osString.contains(GamaBundleLoader.REGULAR_TESTS_LAYOUT);
+			if (!isTest && osString.startsWith(urlRep.getPath())) { return Location.CoreModels; }
+			if (osString
+					.startsWith(urlRep.getPath().replace(GamaBundleLoader.CORE_MODELS.getSymbolicName() + "/", ""))) {
+				if (isTest)
+					return Location.Tests;
 				return Location.Plugins;
 			}
 			return Location.Other;
-		} catch (final IOException e) {
+		} catch (final IOException | URISyntaxException e) {
 			e.printStackTrace();
 			return Location.Unknown;
-		} /*
-			 * catch (URISyntaxException e) { e.printStackTrace(); return
-			 * Location.Unknown; }
-			 */
+		}
 
 	}
 
@@ -181,9 +167,7 @@ public abstract class TopLevelFolder extends VirtualContent {
 			modelCount += NavigatorBaseLighweightDecorator.countModels((IProject) o);
 		}
 
-		if (modelCount > 0) {
-			return String.valueOf(modelCount);
-		}
+		if (modelCount > 0) { return String.valueOf(modelCount); }
 		return " ";
 	}
 
@@ -195,6 +179,10 @@ public abstract class TopLevelFolder extends VirtualContent {
 	@Override
 	public boolean canBeDecorated() {
 		return true;
+	}
+
+	public SelectionListener getSelectionListenerForStatus() {
+		return null;
 	}
 
 }
